[project]
name = "hypir-comfyui"
description = ""
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Optional requirements for the Hyper-ComfyUI node set.", "# ComfyUI already bundles these packages in recent builds, but the list is", "# provided for clarity when creating an isolated environment.", "accelerate>=1.4.0", "peft>=0.14.0", "diffusers>=0.32.0", "transformers>=4.49.0", "torch>=2.1", "numpy", "tqdm", "Pillow", "requests"]

[project.urls]
Repository = "https://github.com/EricRollei/HYPIR-ComfyUI"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/EricRollei/HYPIR-ComfyUI/wiki"
"Bug Tracker" = "https://github.com/EricRollei/HYPIR-ComfyUI/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "HYPIR-ComfyUI"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

